--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=tienda-virtual
+spring.devtools.livereload.enabled= true
+spring.jpa.hibernate.ddl-auto= update
+spring.datasource.url= ${DB_URL}
+spring.datasource.username= ${DB_USER_NAME}
+spring.datasource.password= ${DB_PASSWORD}
+spring.jpa.database-platform= ${DB_PLATFORM}
