--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-api</artifactId>
-			<version>0.11.5</version> <!-- Verifica la última versión -->
+			<version>0.11.5</version> 
 		</dependency>
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
